<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/form_background">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/check"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="140dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infos"
        android:textSize="17sp"
        android:layout_marginBottom="20dp"
        android:textStyle="italic"
        android:textColor="#545C63"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#30ffffff"
        android:padding="1dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:background="@drawable/button_round"
        android:backgroundTint="#F1766D"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_margin="10dp"
        android:padding="1dp"/>

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ret"
        android:background="@drawable/button_round"
        android:backgroundTint="#F1766D"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="1dp"/>

</LinearLayout>